--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,7 +12,17 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 8px;
 }
+
+.left-items, .right-items{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +55,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap:20px;
+  margin:0px;
+  padding: 0px;
 }
