--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+
 }
+
+.cards{
+  display: flex;
+  gap: 52px;
+  margin-top: 32px;
+  justify-content: center;
+}
+
+.card{
+  width: 200px;
+}
+
 
 /* do not edit this footer */
 .footer {
